# bankoper

./: .coverage  .gitignore  README.md  pyproject.toml  requirements-dev.txt  run_logs_test.py  run_tests.bat
data/: operations.json
src/: __init__.py  generators.py  masks.py  operations.py  utils.py  widget.py
src/external_api/: converter.py
src/utils/: json_reader.py
tests/: test_converter.py  test_utils.py
