[tool.poetry]
name = "bank-operations"
version = "0.1.0"
description = "Проект с банковскими операциями и тестами"
authors = ["Твоё Имя <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"